Update Maven-JAXB2-Plugin to include version that works on Java 9