@@ -56,6 +56,8 @@
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
 				<version>0.13.2</version>
+				<!-- This version contains al the fixes -->
+				<!--<version>0.14.0</version>-->
 				<executions>
 					<execution>
 						<id>generate-classes</id>
@@ -67,7 +69,8 @@
 							<schemaDirectory>schema</schemaDirectory>
 							<generateDirectory>${basedir}/generated-jaxb-plugin</generateDirectory>
 							<!-- disabling the generation of the episode file (whatever it does!)
-								 prevents the "Prefix '' is already bound to ''" error on Java 9 -->
+								 prevents the "Prefix '' is already bound to ''" error on Java 9;
+								 no longer required with 0.14.0 -->
 							<episode>false</episode>
 						</configuration>
 					</execution>
@@ -145,10 +148,21 @@
 						</exclusion>
 					</exclusions>
 				</dependency>
+				<!-- module java.xml.bin is deprecated in Java 9, so replace iot with an third-party dependency -->
 				<dependency>
 					<groupId>javax.xml.bind</groupId>
 					<artifactId>jaxb-api</artifactId>
 					<version>2.3.0-b170201.1204</version>
+				</dependency>
+				<dependency>
+					<groupId>com.sun.xml.bind</groupId>
+					<artifactId>jaxb-impl</artifactId>
+					<version>2.3.0</version>
+				</dependency>
+				<dependency>
+					<groupId>com.sun.activation</groupId>
+					<artifactId>javax.activation</artifactId>
+					<version>1.2.0</version>
 				</dependency>
 			</dependencies>
 			<build>
@@ -159,19 +173,11 @@
 							<source>9</source>
 							<target>9</target>
 							<compilerArgs>
-								<arg>--add-modules=java.xml.bind</arg>
 								<arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED</arg>
 								<arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED</arg>
 							</compilerArgs>
 						</configuration>
 					</plugin>
-<!--
-					<plugin>
-						<groupId>org.jvnet.jaxb2.maven2</groupId>
-						<artifactId>maven-jaxb2-plugin</artifactId>
-						<version>0.13.3-SNAPSHOT</version>
-					</plugin>
--->
 				</plugins>
 			</build>
 		</profile>
